Fixed Co. image size to align pics correctly

--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,8 @@ footer{
   
 #work-logo {
     
-    width: 200px;
-    height: 120px;
+    width: 300px;
+    height: 140px;
     margin: 0 auto;
 }
 .work-style {
@@ -58,10 +58,6 @@ footer{
 
 }
 
-.python-logo{
-    background-color: blue;
-}
-
 #tech-stack {
     height: 200px;
 }
@@ -71,6 +67,7 @@ footer{
     grid-template-columns: repeat(auto-fit, minmax(5rem,1fr));
 }
 .row-companies {
+    
     margin: 2rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem,1fr));
